# migration_agent

./: .env.example  README.md  pyproject.toml  requirements.txt
data/: field_mapping.csv  source_schema.json  target_schema.json
outputs/: .gitkeep  sample_output.sql  sql_explanation.md  validation_report.md
src/migration_agent/: __init__.py  main.py  models.py
src/migration_agent/agents/: __init__.py  explainer.py  schema_analyst.py  sql_generator.py  validator.py
